Added HW for API Cypress

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/den-lahoda/cypress-js#readme",
   "devDependencies": {
     "cypress": "^14.4.1",
+    "cypress-plugin-api": "^2.11.2",
     "mochawesome": "^7.1.3"
   }
 }
